@@ -1,4 +1,4 @@
 DIST nuvola-1.0.tar.gz 13594245 RMD160 33a2e67ad7344dd2a78d21c38a8d36cf5ae260e8 SHA1 c485c9ac12019c984eb1ad9f2d46a6eab9e18a22 SHA256 7078c9a3d39951fe36f3e0e54494216737c10514b34e31ff13052c516f99b932
-EBUILD nuvola-1.0-r1.ebuild 703 RMD160 570741579691e05b140e78287fe348363976ccb7 SHA1 b33bf5f9ccf65714b30313e77a03129c56d15ad9 SHA256 9019f5bb7cc219930f80b26f7ee8dda77ced48e95bf496f656c1f28a6cd4e540
-MISC ChangeLog 2400 RMD160 5b7039f63f364388774893f26db8c0685bc9b152 SHA1 2619564a1eb8929b0155bac23964b9fe06eb39dd SHA256 b0e7486bb2753f5871d0e1dc95198825fee65cc43f4eb77390ac6edcb97e3a1b
+EBUILD nuvola-1.0-r1.ebuild 735 RMD160 bc0071b0f62ee0b40a70e2b018760b54bdc3011a SHA1 4e34f547e71967566ca6792d9f7e6e1fb1337fe6 SHA256 2dbaf998094e3d4f25e555fdb055b7c6ba1b8e0f1c5e0a40cc0a2ba9c21a1213
+MISC ChangeLog 2533 RMD160 b36a69106f5453996aa0601c79b2fbb985cc7e28 SHA1 e424e1e5be391b70dd24570f16fc65ab3ce10e64 SHA256 764f4dad894e5a21efe8326356086cd6649cb31a1ad290f69d5c99e3aa0b9b9c
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
