@@ -1,6 +1,9 @@
 # ChangeLog for x11-themes/nuvola
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/nuvola/ChangeLog,v 1.19 2006/11/28 00:28:32 flameeyes Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/nuvola/ChangeLog,v 1.20 2009/10/14 17:15:03 ssuominen Exp $
+
+  14 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> nuvola-1.0-r1.ebuild:
+  Block =kde-base/kdeartwork-iconthemes-4* wrt #250898.
 
   28 Nov 2006; Diego Pettenò <flameeyes@gentoo.org> nuvola-1.0-r1.ebuild:
   Remove the dummy src_compile, and use doins instead of cp to copy the icons.
